[gd_scene load_steps=29 format=2]

[ext_resource path="res://male/Attack (5).png" type="Texture" id=1]
[ext_resource path="res://male/Attack (4).png" type="Texture" id=2]
[ext_resource path="res://male/Attack (6).png" type="Texture" id=3]
[ext_resource path="res://male/Attack (7).png" type="Texture" id=4]
[ext_resource path="res://male/Attack (8).png" type="Texture" id=5]
[ext_resource path="res://Chefe.gd" type="Script" id=6]
[ext_resource path="res://musics/damage.wav" type="AudioStream" id=7]
[ext_resource path="res://male/Attack (3).png" type="Texture" id=8]
[ext_resource path="res://male/Dead (11).png" type="Texture" id=9]
[ext_resource path="res://male/Dead (1).png" type="Texture" id=10]
[ext_resource path="res://male/Dead (2).png" type="Texture" id=11]
[ext_resource path="res://male/Dead (3).png" type="Texture" id=12]
[ext_resource path="res://male/Dead (8).png" type="Texture" id=13]
[ext_resource path="res://male/Dead (5).png" type="Texture" id=14]
[ext_resource path="res://male/Dead (4).png" type="Texture" id=15]
[ext_resource path="res://male/Dead (12).png" type="Texture" id=16]
[ext_resource path="res://male/Dead (6).png" type="Texture" id=17]
[ext_resource path="res://male/Dead (7).png" type="Texture" id=18]
[ext_resource path="res://male/Dead (9).png" type="Texture" id=19]
[ext_resource path="res://male/Dead (10).png" type="Texture" id=20]
[ext_resource path="res://male/Attack (1).png" type="Texture" id=21]
[ext_resource path="res://male/Attack (2).png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 16 ) ],
"loop": true,
"name": "DeadInimigo",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Ataque",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 90.5107
height = 254.101

[sub_resource type="CircleShape2D" id=3]
radius = 116.36

[sub_resource type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=6]

[node name="Chefe" type="KinematicBody2D"]
position = Vector2( 314.514, 297.443 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.00012207, -4.78323 )
frames = SubResource( 1 )
animation = "Ataque"
frame = 6
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 36.7302, 48.2502 )
rotation = -0.253073
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -35.0037, -61.811 )
shape = SubResource( 3 )

[node name="EnergiaInimigo" type="ProgressBar" parent="."]
margin_left = -131.0
margin_top = -231.0
margin_right = 100.0
margin_bottom = -207.0
theme = SubResource( 4 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 1000.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dano" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -25.0

[node name="magia" type="Node2D" parent="."]

[node name="recarga_magia" type="Timer" parent="magia"]
wait_time = 3.0

[node name="magia_esquerda" type="Position2D" parent="magia"]
position = Vector2( -350, 0 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_matar_boss"]
[connection signal="timeout" from="magia/recarga_magia" to="." method="_on_Timer_timeout"]
